포트폴리오

--- a/index.html
+++ b/index.html
@@ -65,24 +65,13 @@
 											<div class="contents_visual"><img src="pc/image/contents_visual/visual_1.jpg" alt=""></div>
 											<div class="contents_info">
 												<div class="inner_info">
-													<div class="title">
-														<a href="http://www.mulawear.com/" target="_blank">뮬라웨어 KR</a>
-													</div>
-													<div class="title_icon">
+													<!-- <div class="title_icon">
 														<div class="icon_inner">
 															<span><img src="pc/image/main/title_icon.png" alt=""></span>
-															<span>click</span>
 														</div>
-													</div>
-													<div class="content_widget">
-														<dl>
-															<dt>종류:</dt>
-															<dd>쇼핑몰</dd>
-														</dl>
-														<dl>
-															<dt>구분:</dt>
-															<dd>신규작업</dd>
-														</dl>
+													</div> -->
+													<div class="title">
+														<a href="http://www.mulawear.com/" target="_blank">뮬라웨어 KR</a>
 													</div>
 												</div>
 											</div>
